# asset-allocation-runtime-common

./: .env.template  .gitignore  AGENTS.md  README.md
.codex/gateway/: ledger.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  refresh-contracts-pin.yml  release.yml  security.yml
python/: README.md  pyproject.toml
python/asset_allocation_runtime_common/: __init__.py  _symbol_enrichment_contract_compat.py  api_gateway_auth.py  backtest_repository.py  backtest_results.py  control_plane_transport.py  intraday_repository.py  job_metadata.py  notification_repository.py  postgres.py  ranking_repository.py  regime_repository.py  results_repository.py  strategy_publication_repository.py  strategy_repository.py  symbol_enrichment_repository.py  universe_repository.py
python/asset_allocation_runtime_common/backtesting/: __init__.py  results.py  runtime_engine.py
python/asset_allocation_runtime_common/domain/: __init__.py  regime.py
python/asset_allocation_runtime_common/foundation/: __init__.py  blob_storage.py  config.py  datetime_utils.py  debug_symbols.py  logging_config.py  postgres.py  purge_rules.py  redaction.py  run_manifests.py  runtime_config.py
python/asset_allocation_runtime_common/market_data/: __init__.py  bronze_bucketing.py  core.py  delta_core.py  domain_artifacts.py  domain_metadata_snapshots.py  gold_column_lookup_catalog.py  gold_sync_contracts.py  layer_bucketing.py  market_symbols.py  pipeline.py  symbol_availability.py
python/asset_allocation_runtime_common/providers/: __init__.py  alpha_vantage_gateway_client.py  massive_gateway_client.py  massive_provider.py  quiver_gateway_client.py
python/asset_allocation_runtime_common/ranking_engine/: catalog.py  contracts.py  naming.py  service.py
python/asset_allocation_runtime_common/shared_core/: alpha_vantage_gateway_client.py  blob_storage.py  bronze_bucketing.py  config.py  core.py  datetime_utils.py  debug_symbols.py  delta_core.py  domain_artifacts.py  domain_metadata_snapshots.py  gold_column_lookup_catalog.py  gold_sync_contracts.py  layer_bucketing.py  logging_config.py  market_symbols.py  massive_gateway_client.py  massive_provider.py  pipeline.py  postgres.py  purge_rules.py  quiver_gateway_client.py  redaction.py  regime.py  run_manifests.py  runtime_config.py  symbol_availability.py
python/asset_allocation_runtime_common/strategy_engine/: __init__.py  contracts.py  exit_rules.py  position_state.py  simulator.py  universe.py
scripts/: prepare-release.ps1  setup-env.ps1  sync-all-to-github.ps1  verify_pinned_dependency.py
tests/: test_contracts_pin_workflows_contract.py  test_release_workflow_contract.py
(+34 files in other folders)
