[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation-runtime-common"
version = "2.0.0"
description = "Shared transport-neutral runtime helpers for the Asset Allocation split repos."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "asset-allocation-contracts==1.1.0",
    "azure-identity==1.25.2",
    "httpx==0.28.1",
    "psycopg==3.3.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "ruff==0.12.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_allocation_runtime_common*"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["F"]
